1999-02-10  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_texinfo): Added `pgs' to list of
	extensions.  From NISHIDA Keisuke.

1999-02-04  Akim Demaille  <demaille@inf.enst.fr>

	* automake.in (handle_texinfo): remove texinfo.tex from
 	TEXINFODIR.

1999-02-02  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_merge_targets): Use INSTALL_STRIP_FLAG.
	* progs.am (install-@DIR@PROGRAMS): Added INSTALL_STRIP_FLAG.
	* header-vars.am (INSTALL_PROGRAM): Removed
	AM_INSTALL_PROGRAM_FLAGS.
	(INSTALL_STRIP_FLAG): New macro.

	* automake.in: Handle `ypp' as C++ yacc source and `lpp' as C++
	lex source.
	(lang_yacc_finish): Likewise.
	(lang_lex_finish): Likewise.

1999-02-01  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_dist_worker): Correctly find find in $$d,
	not $$.  From Bill Davidson.

	* automake.in (finish_languages): Use "&", not "do".  From Pavel
	Roskin.
	(handle_single_transform_list): Likewise.

1999-01-29  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_configure): Removed unused variable.  From
	Pavel Roskin.

	* ansi2knr.c: New version from L. Peter Deutsch.

1999-01-22  Tom Tromey  <tromey@cygnus.com>

	* automake.in (require_file_internal): Correctly examine return
	value of `system'.  From Andris Pavenis.  Fixes copy.test.

	* m4/init.m4 (AM_INIT_AUTOMAKE): Require autoconf 2.13.

	* automake.in (lang_ppf77_rewrite): New function.  From Jochen
	Kuepper.  Fixes ppf77.test.
	(lang_ratfor_rewrite): New function

	* automake.in (handle_configure): Use `&' before sub calls (Perl 4
	fix).  From Erez Zadok.

1999-01-15  Tom Tromey  <tromey@cygnus.com>

	* configure.in: Version 1.4a (oops).

	* configure.in: Updated version to 1.5a.

1999-01-14  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_configure): Compute $header_dir based on
	$one_name, not $one_hdr.  Reported by Erez Zadok.  Fixes
	confh2.test.
	(handle_configure): Compute relative path to input header
	correctly in all cases.
