@@ -1,3 +1,9 @@
+1999-02-07  Paul Eggert  <eggert@twinsun.com>
+
+	* m4/ccstdc.m4 (AM_PROG_CC_STDC): Prefer -Ae to -Aa
+	-D_HPUX_SOURCE, since -Ae allows `long long' and this is
+	needed by some programs.
+
 1999-02-10  Tom Tromey  <tromey@cygnus.com>
 
 	* automake.in (handle_texinfo): Added `pgs' to list of
